test: Adds test infrastructure, however for some reasons comparing them is not working
* While image look VERY similar to the human eyes, comparing them do not work as expected.
* Another issue to tackle is controling properly the appearance, even if it's changeable by API